--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -11,9 +11,8 @@
       <span class="name-text mat-typography">Lung Tracker</span>
     </div>
     <div class ="principal-text"   fxLayout="column" fxLayoutAlign= "center start" fxLayoutAlign.lt-md="center center" fxFlex="40">
-      <h1 class="welcome-text">¡Bienvenidos a 
-        LungTracker 
-        Web!</h1>
+      <h1 class="welcome-text">¡Bienvenidos a
+        LungTracker!</h1>
       <p class="text-header">¿Estás luchando contra el cáncer de pulmón o ya lo has batido?
           <br>Ayúdanos en la recopilación de información mediante el siguiente formulario:</p>
 
@@ -21,7 +20,7 @@
       <a class="link dim br-pill ph3 pv2 dib white bg-black main-button" (click)="lungForm()">Participa</a>
 
 
-      <h2 class="text-header"> ¡Consulta las redes sociales 
+      <h2 class="text-header"> ¡Consulta las redes sociales
         <br>del equipo investigador!</h2>
 
       <div class="icons"   fxLayoutAlign="center center" >
@@ -56,13 +55,13 @@
   <div style="width: 100%" fxLayout="row" fxLayoutAlign="center center">
     <h4>SOBRE NOSOTROS</h4>
   </div>
-  
+
   <div class = "texto_us" fxLayout = "row" fxLayoutAlign = "center center" fxLayout.lt-md="column">
-  <p fxFlex="40">A pesar de que el cancer de pulmón se asocia al tabaquismo, la OMS identifica más de 120 causas 
-    que provocan cáncer (carcionogenos)
+  <p fxFlex="40">A pesar de que el cancer de pulmón se asocia al tabaquismo, la OMS identifica más de 120 causas
+    que provocan cáncer (carcinógenos).
   </p>
-  <p fxFlex="40">Mediante una recogida exhaustiva de datos e información obtenida previamente, se realizaran diferentes 
-    estudios e analisis.
+  <p fxFlex="40">Mediante una recogida exhaustiva de datos e información obtenida previamente, se realizarán diferentes
+    estudios y análisis.
   </p>
 </div>
 </div>
@@ -79,7 +78,7 @@
       alt="dades_logo"
       src="assets/images/patience_science.png"  />
 
-      <h6>Patience Science</h6>
+      <h6>Patients Science</h6>
       <p>Herramienta tecnológica para el equipo investigador de cáncer de pulmón que funciona mediante los datos proporcionados por los pacientes.</p>
     </div>
 
@@ -89,7 +88,7 @@
       alt="dades_logo"
       src="assets/images/data_icon.png"  />
       <h6>Recogida de datos</h6>
-      <p>Recoger datos de pacientes de cáncer de pulmón para ayudar en la lucha.</p>
+      <p>Recoger datos de pacientes de cáncer de pulmón para ayudar en nuestra investigación.</p>
     </div>
 
     <div class="icon_3 list-object" fxFlex="33" fxLayout="column" fxLayoutAlign="space-between center">
@@ -98,7 +97,7 @@
       alt="dades_logo"
       src="assets/images/previsio_icon.png"  />
       <h6>Previsión</h6>
-      <p>Ofrecer a los usuarios información personalizada sobre su situación.</p>
+      <p>Ofrecer a los usuarios información personalizada sobre su situación a partir de los datos introducidos en el formulario.</p>
     </div>
 
   </div>
@@ -109,7 +108,7 @@
   <div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayout.lt-md="column" >
     <div fxLayout="column" fxLayoutAlign.lt-md="center center">
       <span class="info-text" style="width: 80%;">Han participado en la investigación del cáncer de pulmón:</span>
-     
+
       <div fxLayout="row" fxLayoutAlign="center center" class="numbers-div">
         <span class="info-text big-numbers padding-text">{{formsSubmitted}}</span>
         <mat-icon class="big-numbers" style="color: #CDCDF5">person</mat-icon>
@@ -124,7 +123,7 @@
         <span class="info-text big-numbers padding-text" style="padding-top: 20px;">{{avgSuggestMark}}<span style="font-size: 25px;" class="info-text big-numbers padding-text">/5</span></span>
         <mat-icon class="big-numbers" style="color: #CDCDF5">star</mat-icon>
       </div>
-      
+
     </div>
   </div>
 </div>
@@ -188,7 +187,7 @@
           <mat-label>Correo electrónico</mat-label>
           <textarea matInput id="email" placeholder="Correo" rows="1" cols="25" formControlName="mail" required></textarea>
         </mat-form-field>
-       
+
       </div>
     </div>
 
@@ -215,7 +214,7 @@
         <label for="radio5">5</label><br />
       </div>
     </div>
-    
+
       <div class="inputs2" fxLayoutGap="1px" fxLayout="column" fxLayoutAlign="space-around start" style="width: 300px;">
         <h3>Descripción</h3>
         <mat-form-field appearance="outline" style="width: 100%;">
