--- a/LungTrackerWeb/src/app/researcher/researcher.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher.component.html
@@ -2,22 +2,24 @@
 
     <h1>Área investigadores:</h1>
     <h3> En esta área se pueden consultar los resultados de las encuestas realizadas por pacientes de cáncer de pulmón.</h3>
+    <button type="button" mat-raised-button color="primary" class="export-button" title="Export all my snippets"
+          (click)="exportPersonsToJSON()">
+        Exportar resultados <i class="icon-download"></i>
+    </button>
     <div class="inline-charts">
         <chart *ngIf="showGraphs[1]" class="dashchart2" [type]="typeAgeRanges" [data]="dataAgeRanges"
         [options]="optionsAgeRanges"></chart>
         <chart *ngIf="showGraphs[0]" class="dashchart" [type]="typeLocalitzation" [data]="dataLocalitzation"
         [options]="optionsLocalitzation"></chart>
     </div>
-    <div class="inline-charts">
+    <div class="inline-charts-bottom">
        <chart *ngIf="showGraphs[3]" class="dashchart" [type]="typeExpositions" [data]="dataExpositions"
         [options]="optionsExpositions"></chart>
         <chart *ngIf="showGraphs[2]" class="dashchart" [type]="typeMutations" [data]="dataMutations"
         [options]="optionsMutations"></chart>
     </div>
-  <!--  <button>
-        <a class="btn btn-clear" title="Download JSON" [href]="downloadJsonHref" download="download.json"></a>
-    </button>-->
-
+ 
+    
     <h3> La siguiente tabla detalla todas las encuestas realizadas.</h3>
     <ng-container >
 
