--- a/LungTrackerWeb/src/app/researcher/researcher.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher.component.html
@@ -1,11 +1,16 @@
 <div class="table-div" >
 
-    <h1>Área investigadores:</h1>
+    <h1>Área investigadores</h1>
     <h3> En esta área se pueden consultar los resultados de las encuestas realizadas por pacientes de cáncer de pulmón.</h3>
     <button type="button" mat-raised-button color="primary" class="export-button" title="Export all my snippets"
           (click)="exportPersonsToJSON()">
-       Exportar resultados 
+       Exportar resultados
     </button>
+    <button type="button" mat-raised-button color="primary" class="export-button" title="Export all my snippets"
+          (click)="navigateToMaps()">
+      Acceder a mapas
+    </button>
+
     <div class="inline-charts">
         <chart *ngIf="showGraphs[1]" class="dashchart2" [type]="typeAgeRanges" [data]="dataAgeRanges"
         [options]="optionsAgeRanges"></chart>
@@ -18,8 +23,8 @@
         <chart *ngIf="showGraphs[2]" class="dashchart" [type]="typeMutations" [data]="dataMutations"
         [options]="optionsMutations"></chart>
     </div>
- 
-    
+
+
     <h3> La siguiente tabla detalla todas las encuestas realizadas.</h3>
     <ng-container >
 
