--- a/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.css
+++ b/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.css
@@ -1,6 +1,5 @@
 .map-container {
-  display: flex;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -11,12 +10,11 @@
 .map-frame {
   border: 2px solid black;
   height: 100%;
-  flex: 1 1;
-  order: 2;
-  display: flex;
 }
 
 #map {
-  flex: 1;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
