--- a/LungTrackerWeb/src/app/researcher/researcher-map/researcher-map.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher-map/researcher-map.component.html
@@ -3,7 +3,7 @@
     <h1 class="welcome-text">Mapa Residencial actual de los pacientes</h1>
     <h2 class="light-text">Aquí podrás observar las residencias actuales de los pacientes participantes en el estudio del cáncer en España.</h2>
   </div>
-  <div fxLayout="column" fxLayoutAlign="center center" class="flex-content">
+  <div>
     <app-leaflet-map></app-leaflet-map>
   </div>
 </div>
