--- a/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.css
+++ b/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.css
@@ -1,10 +1,9 @@
 .map-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: 30px;
+  height: 500px;
+  width: 80%;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .map-frame {
